Fixed issue with animation overlapping on response

--- a/src/assets/utils/WeatherCarousel.css
+++ b/src/assets/utils/WeatherCarousel.css
@@ -5,3 +5,10 @@
     margin: 5px;
     height: 300px;
   }
+
+
+  .form
+  {
+    z-index: 1000;
+    position: relative;
+  }
